k8s/order/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: mini

spec:
  selector:
    app: order-service

  ports:
    - port: 5004
      targetPort: 5004
      protocol: TCP

  type: ClusterIP
